--- a/lex-web-ui/src/config/config.prod.json
+++ b/lex-web-ui/src/config/config.prod.json
@@ -3,7 +3,7 @@
     "poolId": ""
   },
   "lex": {
-    "botName": "WebUiPolicyLookup",
+    "botName": "CR_chatbot",
     "initialText": "You can ask me for help look up cross border fees. Just type \"cross border fees\" or click on the mic and say it.",
     "initialSpeechInstruction": "Say 'cross border fees' to get started."
   },
