--- a/templates/lexbot.yaml
+++ b/templates/lexbot.yaml
@@ -54,7 +54,7 @@ Resources:
                 S3Key: !Ref CustomResourceCodeObject
             Handler: lex-manager.handler
             Role: !GetAtt LexBotLambdaRole.Arn
-            Runtime: python2.7
+            Runtime: nodejs8.10
             Timeout: 300
 
     LexBotLambdaRole:
