--- a/templates/cognito.yaml
+++ b/templates/cognito.yaml
@@ -17,7 +17,7 @@ Parameters:
     LexBotName:
         Type: String
         Description: Lex bot name used to build IAM policy
-        Default: OrderFlowers
+        Default: CR_chatbot
 
 Resources:
     CognitoIdentityPool:
