update BOOTSTRAP_BUCKET_PATH, especially bucket name

--- a/templates/codebuild-deploy.yaml
+++ b/templates/codebuild-deploy.yaml
@@ -18,7 +18,7 @@ Parameters:
     SourceBucket:
         Description: S3 bucket where the source is located
         Type: String
-        Default: aws-bigdata-blog
+        Default: cr-chatbot
 
     SourceObject:
         Description: S3 object zip file containing the project source
