--- a/templates/cognito.yaml
+++ b/templates/cognito.yaml
@@ -8,7 +8,7 @@ Parameters:
     CognitoIdentityPoolName:
         Type: String
         Description: Cognito identity pool name.
-        Default: identity pool
+        Default: chatbot
         MinLength: 1
         MaxLength: 128
         AllowedPattern: '^[\w ]+$'
