update prefix to artifacts

--- a/templates/codebuild-deploy.yaml
+++ b/templates/codebuild-deploy.yaml
@@ -23,13 +23,13 @@ Parameters:
     SourceObject:
         Description: S3 object zip file containing the project source
         Type: String
-        Default: artifacts/aws-lex-web-ui/artifacts/src.zip
+        Default: artifacts/src.zip
 
     CustomResourceCodeObject:
         Type: String
         Description: >
             S3 object zip file containing Lambda custom resource functions
-        Default: artifacts/aws-lex-web-ui/artifacts/custom-resources.zip
+        Default: artifacts/custom-resources.zip
 
     CleanupBuckets:
         Type: String
