--- a/templates/master.yaml
+++ b/templates/master.yaml
@@ -103,7 +103,7 @@ Parameters:
       S3 bucket containing pre-staged nested templates and source artifacts
   BootstrapPrefix:
     Type: String
-    Default: artifacts/aws-lex-web-ui/artifacts
+    Default: artifact
     Description: |
       S3 prefix where the templates and source are stored under
   WebAppConfBotInitialText:
