Add lambda folder and zip/deployment command

--- a/templates/Makefile
+++ b/templates/Makefile
@@ -1,3 +1,5 @@
+# This file is for template validation and cleaning /out
+
 TEMPLATES := $(wildcard *.json *.yml *.yaml)
 
 # build output directory
