--- a/lex-web-ui/package.json
+++ b/lex-web-ui/package.json
@@ -18,10 +18,12 @@
   },
   "dependencies": {
     "aws-sdk": "^2.180.0",
+    "axios": "^0.18.0",
     "marked": "^0.3.19",
     "material-design-icons": "^3.0.1",
     "roboto-fontface": "^0.8.0",
     "vue": "^2.5.13",
+    "vue-axios": "^2.1.3",
     "vue-router": "^3.0.1",
     "vuetify": "^0.17.6",
     "vuex": "^3.0.1"
