--- a/templates/master.yaml
+++ b/templates/master.yaml
@@ -109,8 +109,7 @@ Parameters:
   WebAppConfBotInitialText:
     Type: String
     Default: >
-      You can ask me for help look up cross border fees. Just type "Cross border fees" or click
-      on the mic and say it.
+      You can ask me for help look up cross border fees. Please type "Cross border fees" to start.
     Description: First bot message displayed in the chatbot UI
   WebAppConfBotInitialSpeech:
     Type: String
