Update title, transcripts and fix booking number bug

--- a/lex-web-ui/src/config/config.prod.json
+++ b/lex-web-ui/src/config/config.prod.json
@@ -13,7 +13,7 @@
   "ui": {
     "parentOrigin": "",
     "pageTitle": "Policy Lookup Bot",
-    "toolbarTitle": "Policy Lookup"
+    "toolbarTitle": "Cross border fee lookup"
   },
   "recorder": {
     "preset": "speech_recognition"
