--- a/src/config/lex-web-ui-loader-config.json
+++ b/src/config/lex-web-ui-loader-config.json
@@ -9,7 +9,7 @@
   },
   "ui": {
     "parentOrigin": "",
-    "toolbarTitle": "Policy Lookup",
+    "toolbarTitle": "Cross border fee lookup",
     "toolbarLogo": "",
     "pushInitialTextOnRestart": true
   },
