--- a/lambda/cross-border-fees/package.json
+++ b/lambda/cross-border-fees/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "lambdas",
+  "name": "cross-border-fees",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
-  "devDependencies": {},
   "dependencies": {
-    "node-stream-zip": "^1.7.0"
+    "es6-promisify": "^6.0.0"
   }
 }
