Add a logo and make a temporary parent style

--- a/lex-web-ui/src/config/config.prod.json
+++ b/lex-web-ui/src/config/config.prod.json
@@ -4,7 +4,7 @@
   },
   "lex": {
     "botName": "CR_chatbot",
-    "initialText": "You can ask me to look up cross border fees. Please type \"cross border fees\" to start. ",
+    "initialText": "Hi, I’m Brian the CarRentals Bot. You can ask me to look up cross border fees for existing bookings ",
     "initialSpeechInstruction": "Say 'cross border fees' to get started."
   },
   "polly": {
@@ -13,7 +13,7 @@
   "ui": {
     "parentOrigin": "",
     "pageTitle": "Policy Lookup Bot",
-    "toolbarTitle": "Cross border fee lookup"
+    "toolbarTitle": "CarRentals Bot"
   },
   "recorder": {
     "preset": "speech_recognition"
