--- a/templates/codebuild-deploy.yaml
+++ b/templates/codebuild-deploy.yaml
@@ -76,7 +76,8 @@ Parameters:
         Type: String
         Default: >
             Hi, I’m Brian the CarRentals Bot. You can ask me to look up
-            cross border fees for existing bookings.
+            cross border fees for existing bookings. Please type 'cbf' 
+            or 'cross border fees' to get started.
         Description: First bot message displayed in the chatbot UI
 
     WebAppConfBotInitialSpeech:
