--- a/lambda/cross-border-fees/package.json
+++ b/lambda/cross-border-fees/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "csvtojson": "^2.0.8",
-    "es6-promisify": "^6.0.0"
+    "es6-promisify": "^6.0.0",
+    "lodash": "^4.17.11"
   }
 }
