Update send email logic and supplier look up logic

--- a/src/config/lex-web-ui-loader-config.json
+++ b/src/config/lex-web-ui-loader-config.json
@@ -10,7 +10,8 @@
   "ui": {
     "parentOrigin": "",
     "toolbarTitle": "CarRentals Bot",
-    "toolbarLogo": ""
+    "toolbarLogo": "",
+    "pushInitialTextOnRestart": true
   },
   "polly": {
     "voiceId": "Salli"
